Working on S3 at last

--- a/src/index.html
+++ b/src/index.html
@@ -2,21 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AI/IoT/Blockchain Full Stack Engineer</title>
+  <title>PomeFront</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="freelance, Machine Learning, Blockchain, Azure, IoT, Quant" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Yellowtail&display=swap" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.3/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNZW74T3LT"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-PNZW74T3LT');
-  </script>
 </head>
 <body>
   <app-root></app-root>
